--- a/CrashOnBackgroundIos/MainPage.xaml
+++ b/CrashOnBackgroundIos/MainPage.xaml
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                BackgroundColor="Blue"
              x:Class="CrashOnBackgroundIos.MainPage">
 
-    <ScrollView>
+    <ScrollView
+                        BackgroundColor="Blue"
+        >
         <VerticalStackLayout
-            Padding="30,0"
+                 BackgroundColor="Blue"
+           Padding="30,0"
             Spacing="25">
             <Image
                 Source="dotnet_bot.png"
@@ -14,11 +18,13 @@
                 SemanticProperties.Description="dot net bot in a race car number eight" />
 
             <Label
+                BackgroundColor="Blue"
                 Text="Hello, World!"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
+                BackgroundColor="Blue"
                 Text="Welcome to &#10;.NET Multi-platform App UI"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
@@ -26,6 +32,7 @@
 
             <Button
                 x:Name="CounterBtn"
+                BackgroundColor="Blue"
                 Text="Click me" 
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
